--- a/expense-tracker/frontend/.gitignore
+++ b/expense-tracker/frontend/.gitignore
@@ -1,3 +1,12 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
 node_modules
 dist
 dist-ssr
@@ -13,8 +22,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
-config.js
-
-checkmate
-# payments-system
