--- a/expense-tracker/frontend/package.json
+++ b/expense-tracker/frontend/package.json
@@ -13,14 +13,18 @@
     "@flaticon/flaticon-uicons": "^3.3.1",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
     "flaticon": "^0.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lazy": "^1.0.11",
     "nanoid": "^5.1.5",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3",
+    "recharts": "^3.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
